Basic Post swagger
