# app/serializers/serializable_post.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+class SerializablePost < BaseSerializable
+  type "posts"
+
+  attributes :title, :content
+end
